test/good/generators/next01.px

func f(): Bool... def
    yield true
    yield false

g = f()
print g.next()
print g.next()
