test/bad/generators/generator03.px

func f() Bool def
    yield true

f()
